force-app/main/default/objects/Compra_Venta_Dolares__mdt/Compra_Venta_Dolares__mdt.object-meta.xml
<CustomObject>
    <label>Compra / Venta Dolares</label>
    <pluralLabel>Compra / Venta Dolares</pluralLabel>
</CustomObject>