force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Cuenta_Destino__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Destino__c</fullName>
    <label>Cuenta Destino</label>
    <length>20</length>
    <type>Text</type>
</CustomField>