force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Cuenta_Origen__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Origen__c</fullName>
    <label>Cuenta Origen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>