force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Nivel_Cinco__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Cinco__c</fullName>
    <label>Nivel Cinco</label>
    <length>20</length>
    <type>Text</type>
</CustomField>