force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Nivel_Cuatro__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Cuatro__c</fullName>
    <label>Nivel Cuatro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>