force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Nivel_Dos__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Dos__c</fullName>
    <label>Nivel Dos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>