force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Nivel_Tres__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Tres__c</fullName>
    <label>Nivel Tres</label>
    <length>20</length>
    <type>Text</type>
</CustomField>