force-app/main/default/objects/Compra_Venta_Dolares__mdt/fields/Nivel_Uno__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Uno__c</fullName>
    <label>Nivel Uno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>